indirect_middleware/error.txt
C:\Users\Usuari\PycharmProjects\SD-PRAC-1\.venv\Scripts\python.exe C:\Users\Usuari\PycharmProjects\SD-PRAC-1\indirect_middleware\benchmark_PORTATIL.py
Traceback (most recent call last):
  File "C:\Users\Usuari\PycharmProjects\SD-PRAC-1\indirect_middleware\benchmark_PORTATIL.py", line 4, in <module>
    import pika
  File "C:\Users\Usuari\PycharmProjects\SD-PRAC-1\.venv\Lib\site-packages\pika\__init__.py", line 20, in <module>
    from pika.adapters import BaseConnection
  File "C:\Users\Usuari\PycharmProjects\SD-PRAC-1\.venv\Lib\site-packages\pika\adapters\__init__.py", line 43, in <module>
    from pika.adapters.libev_connection import LibevConnection
  File "C:\Users\Usuari\PycharmProjects\SD-PRAC-1\.venv\Lib\site-packages\pika\adapters\libev_connection.py", line 106
    self.async = None
         ^^^^^
SyntaxError: invalid syntax